--- a/Website/index.html
+++ b/Website/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Random Text Generator</title>
+  <title>Trump Recurrent neural network</title>
   <style>
     /* Add some styling here */
   </style>
 </head>
 <body>
-  <h1>Random Text Generator</h1>
-  <button id="generate-button">Generate</button>
+  <h1 align="center">Trump Recurrent Neural Network Tweet Generator</h1>
+  <div align="center">
+    <button id="generate-button">Generate</button>
+
+  </div>
   <div id="output"></div>
 
   <script>
